<resources>
    <string name="app_name">NGA净化</string>
    <string name="app_desc">过滤NGA烦人的广告</string>
    <string name="running_status">运行状态</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="author">作者</string>
    <string name="donate">捐赠</string>
    <string name="other">其他</string>
    <string name="reopen_nga">打开NGA</string>
    <string name="module_enabled">模块已启用</string>
    <string name="module_disabled">模块未启用</string>
    <string name="github_url">https://github.com/chr233/PureNGA</string>
    <string name="author_url">https://github.com/chr233</string>
    <string name="donate_url">https://afdian.net/a/chr233</string>
    <string name="author_summary" translatable="false">chr233</string>
    <string name="donate_summary">爱发电</string>
    <string name="hide_icon">隐藏桌面图标</string>
    <string name="hide_icon_summary">不在启动器中显示图标</string>
    <string name="plugin_setting">插件设置入口</string>
    <string name="plugin_setting_summary"><![CDATA[NGA > 设置 > PureNGA 设置]]></string>
    <string name="pure_function_setting">功能设置</string>
    <string name="pure_ad_setting">广告设置</string>
    <string name="pure_other_setting">杂项</string>
    <string name="pure_splash_ad">屏蔽开屏广告</string>
    <string name="pure_post_ad">屏蔽信息流广告</string>
    <string name="crack_ad_task">破解去广告任务</string>
    <string name="use_external_browser">使用外部浏览器打开链接</string>
    <string name="kill_update_check">禁止APP检查更新</string>
    <string name="hide_hook_info">不显示模块运行信息</string>
    <string name="pure_ad_icon">屏蔽导航栏上的活动图标(WIP)</string>
    <string name="kill_popup_dialog">屏蔽应用内弹窗</string>
    <string name="tutorials_first">在侧滑菜单找到【设置】</string>
    <string name="tutorials_second">在最底部找到【PureNGA 设置】</string>
    <string name="open_nga_summary">屎黄色论坛, 启动!</string>
    <string name="setting">设置</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>