<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="other"
        android:title="@string/other">

        <Preference
            android:key="running_status"
            android:title="@string/running_status" />

        <Preference
            android:key="open_nga"
            android:summary="@string/open_nga_summary"
            android:title="@string/reopen_nga" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="setting"
        android:title="@string/setting">

        <Preference
            android:key="plugin_setting"
            android:summary="@string/plugin_setting_summary"
            android:title="@string/plugin_setting" />

        <Preference
            android:key="hide_icon"
            android:summary="@string/hide_icon_summary"
            android:title="@string/hide_icon" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about"
        android:title="@string/about">

        <Preference
            android:key="version"
            android:title="@string/version" />

        <Preference
            android:key="author"
            android:summary="@string/author_summary"
            android:title="@string/author" />

        <Preference
            android:key="donate"
            android:summary="@string/donate_summary"
            android:title="@string/donate" />

    </PreferenceCategory>

</PreferenceScreen>